--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>MINESWEEPER</h1>
 		</header>
 			<section id="content">
 				<canvas id="Minesweeper" data-processing-sources="Minesweeper.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Left Click to reveal square <br>
+		    Right Click to flag a bomb<br>
+		    good luck its kinda difficult
 	    </footer>
 	</body>
 </html>
